CHANGES IN VERSION 1.6.0
------------------------
 o convert_summary_file function <2015-07-02, Thu>
 
CHANGES IN VERSION 1.5.9
------------------------
 o generate_run_skleid_app to generate run_skleid.bat for windows platform <2015-06-16, Tue> 
 o run_skleid to launch shiny app <2015-06-16, Tue>
 o shiny app for running skleid <2015-06-16, Tue>
 
CHANGES IN VERSION 1.5.8
------------------------
 o add 'BB_' prefix in mira sequence name of html report <2015-04-23, Thu>
 
CHANGES IN VERSION 1.5.7
------------------------
 o update according to muscle mv to Bioconductor and use Biostrings to store fasta content. <2015-04-20, Mon>
 
CHANGES IN VERSION 1.5.6
------------------------
 o filter read nums below 10 <2015-04-10, Fri>
 
CHANGES IN VERSION 1.5.5
------------------------
 o sort output by sample ID <2015-03-27, Fri>
 o output report in order of c("HA", "NA", "PB2", "PB1", "PA", "NP", "MP", "NS") <2015-03-27, Fri>
 
CHANGES IN VERSION 1.5.4
------------------------
 o remove some source codes to keep it simple and clean <2015-03-26, Thu>
 
CHANGES IN VERSION 1.5.2
------------------------
 o update hamming.BString <2015-03-25, Wed>
 o add plotMap function <2015-03-25, Wed>
 
CHANGES IN VERSION 1.5.1
------------------------
 o add read.genbank function <2015-03-05, Thu>
 o add download_genbank_acc & download_genbank_gi functions <2015-03-05, Thu>
 
CHANGES IN VERSION 1.5.0
------------------------
 o fixed issue of contig has no overlap <2015-02-09, Mon>
 
CHANGES IN VERSION 1.4.8
------------------------
 o update addKeywordFASTA to support user provided keyword mapping <2015-01-26, Mon>
 
CHANGES IN VERSION 1.4.7
------------------------
 o get 454 sequence using pattern of 454\\.fas instead of 454 <2015-01-09, Fri>

CHANGES IN VERSION 1.4.6
------------------------
 o column name NA in summary.csv is not valid and R will read it as NA., fixed it in generateGapFile <2015-01-08, Thu>

CHANGES IN VERSION 1.4.5
------------------------